--- a/webapp/package.json
+++ b/webapp/package.json
@@ -17,15 +17,20 @@
     "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.5",
     "@tailwindcss/forms": "^0.5.10",
+    "@tanstack/react-query": "^5.66.9",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^22.13.5",
+    "@wagmi/core": "^2.16.5",
     "axios": "^1.7.9",
-    "lucide-react": "^0.476.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.476.0",
     "next": "^15.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.2.0",
-    "@types/lodash": "^4.14.202"
+    "viem": "^2.23.5",
+    "wagmi": "^2.14.12",
+    "zksync-sso": "^0.0.0-beta.10"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
