--- a/webapp/package.json
+++ b/webapp/package.json
@@ -16,16 +16,20 @@
     "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.5",
+    "@story-protocol/core-sdk": "^1.3.0-beta.3",
     "@tailwindcss/forms": "^0.5.10",
     "@tanstack/react-query": "^5.66.9",
+    "@types/crypto-js": "^4.2.2",
     "@types/lodash": "^4.14.202",
     "@types/node": "^22.13.5",
     "@wagmi/core": "^2.16.5",
     "axios": "^1.7.9",
+    "crypto-js": "^4.2.0",
     "ethers": "^6.13.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.476.0",
     "next": "^15.1.7",
+    "pinata-web3": "^0.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.2.0",
